[tool.poetry]
name = "extended-harmony"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]
readme = "README.md"
packages = [{include = "extended_harmony"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
jupyterlab = "^4.0.5"
networkx = "^3.1"
pyvis = "^0.3.2"


[tool.poetry.group.dev.dependencies]
nbstripout = "^0.6.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
